# app/Http/Resources/OfertaProgramaResource.php
@@ -12,6 +12,8 @@ class OfertaProgramaResource extends JsonResource
             'id' => $this->id,
             'cupos' => $this->cupos,
             'modalidad' => $this->modalidad,
+            'jornada' => $this->jornada,
+            'municipio' => $this->municipio,
             'centro' => $this->centro_id,
             'instructor' => new InstructorResource($this->instructor),
             'programa' => new ProgramaResource($this->programa),
